--- a/src/app/pages/gest-documental/memorandos/memorandos.component.html
+++ b/src/app/pages/gest-documental/memorandos/memorandos.component.html
@@ -41,7 +41,7 @@
                         <thead>
                             <tr>
                                 <th>Detalles</th>
-                                <th>Empleado asociado al memorando</th>
+                                <th class="text-center">Empleado</th>
                                 <th class="text-center">Fecha de evento</th>
                                 <th class="text-center">Estado</th>
                                 <th class="text-center">Soporte PDF</th>
@@ -77,7 +77,7 @@
                                         <i class="fa fa-upload text-inverse m-r-10"></i>
                                     </a>
                                     &nbsp; &nbsp;
-                                    <a class="cursor" title="Eliminar Transacción" data-toggle="tooltip" data-original-title="Eliminar Registro del Sistema" (click)="eliminarMemorando(memorando)">
+                                    <a class="cursor" title="Eliminar registro del sistema" data-toggle="tooltip" data-original-title="Eliminar registro del sistema" (click)="eliminarMemorando(memorando)">
                                         <i class="fa fa-trash-o text-danger"></i>
                                     </a>
                                 </td>
