--- a/src/app/pages/personalrrhh/empleados/nuevo-empleado.component.html
+++ b/src/app/pages/personalrrhh/empleados/nuevo-empleado.component.html
@@ -235,6 +235,7 @@
                                         <option value="Movii S.A.">Movii S.A.</option>
                                         <option value="RappiPay">RappiPay</option>
                                         <option value="Efectivo">Efectivo</option>
+                                        <option value="NO ESPECIFICA">NO ESPECIFICA</option>
                                     </select>
                                 </div>
                             </div>
@@ -281,6 +282,7 @@
                                         <option value="CAJANAL EPS">CAJANAL EPS</option>
                                         <option value="CAPRESOCA EPS">CAPRESOCA EPS</option>
                                         <option value="SOLSALUD E.P.S. S.A.">SOLSALUD E.P.S. S.A.</option>
+                                        <option value="NO ESPECIFICA">NO ESPECIFICA</option>
                                     </select>
                                 </div>
                             </div>
@@ -299,6 +301,7 @@
                                         <option value="ARL Colmena.">ARL Colmena.</option>
                                         <option value="ARL Bolívar.">ARL Bolívar.</option>
                                         <option value="ARL La Equidad">ARL La Equidad</option>
+                                        <option value="NO ESPECIFICA">NO ESPECIFICA</option>
                                     </select>
                                 </div>
                             </div>
