--- a/src/app/pages/personalrrhh/empleados/actualiza-empleado.component.html
+++ b/src/app/pages/personalrrhh/empleados/actualiza-empleado.component.html
@@ -183,6 +183,7 @@
                                         <option value="Movii S.A.">Movii S.A.</option>
                                         <option value="RappiPay">RappiPay</option>
                                         <option value="Efectivo">Efectivo</option>
+                                        <option value="NO ESPECIFICA">NO ESPECIFICA</option>
                                     </select>
                                 </div>
                             </div>
@@ -198,7 +199,7 @@
                         </div>
                     </div>
 
-                    <div class="row p-t-20">
+                    <!--<div class="row p-t-20">
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label class="control-label label-form-decora">Nacionalidad</label>
@@ -220,6 +221,62 @@
                                     <select [(ngModel)]="empleadoActualizar.ciudadResidencia._id" name="ciudadResidencia" class="form-control custom-select" required>
                                         <option value="">--Seleccione Ciudad--</option>
                                         <option *ngFor="let ciudad of ciudadesList" [value]="ciudad._id">{{ciudad.ciudadName}}</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>-->
+
+                    <div class="row p-t-20">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label class="control-label label-form-decora">EPS / IPS</label>
+                                <div class="input-group">
+                                    <div class="input-group-addon"><i class="ti-anchor"></i></div>
+                                    <select [(ngModel)]="empleadoActualizar.epsSalud" name="epsSalud" class="form-control custom-select" required>
+                                        <option value="">--Seleccione una opción--</option>
+                                        <option value="Compensar E.P.S.">Compensar E.P.S.</option>
+                                        <option value="E.P.S. Sanitas S.A.">E.P.S. Sanitas S.A.</option>
+                                        <option value="E.P.S. Famisanar LTDA.">E.P.S. Famisanar LTDA.</option>
+                                        <option value="E.P.S. Saludcoop">E.P.S. Saludcoop</option>
+                                        <option value="Cruz Blanca EPS S.A.">Cruz Blanca EPS S.A.</option>
+                                        <option value="Salud Colpatria E.P.S.">Salud Colpatria E.P.S.</option>
+                                        <option value="Coomeva E.P.S. S.A.">Coomeva E.P.S. S.A.</option>
+                                        <option value="Humana Vivir S.A. E.P.S. ">Humana Vivir S.A. E.P.S.</option>
+                                        <option value="Salud Colmena E.P.S. S.A.">Salud Colmena E.P.S. S.A.</option>
+                                        <option value="Salud Total S.A. E.P.S.">Salud Total S.A. E.P.S.</option>
+                                        <option value="Cafesalud E.P.S. S.A.">Cafesalud E.P.S. S.A.</option>
+                                        <option value="Instituto de Seguros Sociales EPS">Instituto de Seguros Sociales EPS</option>
+                                        <option value="Unimec E.P.S. S.A.">Unimec E.P.S. S.A.</option>
+                                        <option value="EPS Progr. Comfenalco Antioquia">EPS Progr. Comfenalco Antioquia</option>
+                                        <option value="SuSalud EPS ">SuSalud EPS</option>
+                                        <option value="Colseguros E.P.S.">Colseguros E.P.S.</option>
+                                        <option value="Comfenalco Valle E.P.S.">Comfenalco Valle E.P.S.</option>
+                                        <option value="Caprecom EPS">Caprecom EPS</option>
+                                        <option value="EPS CONVIDA">EPS CONVIDA</option>
+                                        <option value="CAJANAL EPS">CAJANAL EPS</option>
+                                        <option value="CAPRESOCA EPS">CAPRESOCA EPS</option>
+                                        <option value="SOLSALUD E.P.S. S.A.">SOLSALUD E.P.S. S.A.</option>
+                                        <option value="NO ESPECIFICA">NO ESPECIFICA</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label class="control-label label-form-decora">ARL</label>
+                                <div class="input-group">
+                                    <div class="input-group-addon"><i class="ti-anchor"></i></div>
+                                    <select [(ngModel)]="empleadoActualizar.arlTrabajo" name="arlTrabajo" class="form-control custom-select" required>
+                                        <option value="">--Seleccione una opción--</option>
+                                        <option value="ARL Sura.">ARL Sura.</option>
+                                        <option value="ARL Positiva.">ARL Positiva.</option>
+                                        <option value="ARL Axa Colpatria.">ARL Axa Colpatria.</option>
+                                        <option value="ARL Colmena.">ARL Colmena.</option>
+                                        <option value="ARL Bolívar.">ARL Bolívar.</option>
+                                        <option value="ARL La Equidad">ARL La Equidad</option>
+                                        <option value="NO ESPECIFICA">NO ESPECIFICA</option>
                                     </select>
                                 </div>
                             </div>
